--- a/src/output.css
+++ b/src/output.css
@@ -793,12 +793,24 @@ video {
   height: 100vh;
 }
 
-.h-50 {
-  height: 200px;
+.h-\[5px\] {
+  height: 5px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[15px\] {
+  height: 15px;
 }
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-32 {
@@ -813,16 +825,12 @@ video {
   width: 12rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-80 {
   width: 20rem;
 }
 
-.w-\[30px\] {
-  width: 30px;
+.w-\[20px\] {
+  width: 20px;
 }
 
 .w-\[85\%\] {
@@ -833,20 +841,12 @@ video {
   width: 100%;
 }
 
-.w-\[10px\] {
-  width: 10px;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
 .w-screen {
   width: 100vw;
 }
 
-.w-\[20px\] {
-  width: 20px;
+.w-\[30px\] {
+  width: 30px;
 }
 
 .grow {
@@ -899,10 +899,6 @@ video {
 
 .justify-center {
   justify-content: center;
-}
-
-.justify-between {
-  justify-content: space-between;
 }
 
 .gap-1 {
@@ -1085,6 +1081,14 @@ video {
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\'https\:\/\/flagicons\.lipis\.dev\/flags\/4x3\/ar\.svg\'\)\] {
+  background-image: url('https://flagicons.lipis.dev/flags/4x3/ar.svg');
+}
+
+.bg-\[url\(\'https\:\/\/flagicons\.lipis\.dev\/flags\/4x3\/us\.svg\'\)\] {
+  background-image: url('https://flagicons.lipis.dev/flags/4x3/us.svg');
 }
 
 .from-pink-500 {
