Agregando estilos al switch de darkModess

--- a/src/output.css
+++ b/src/output.css
@@ -753,6 +753,10 @@ video {
   margin-top: 1rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1109,10 +1113,6 @@ video {
 
 .bg-center {
   background-position: center;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .p-2 {
