--- a/src/output.css
+++ b/src/output.css
@@ -721,10 +721,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -757,10 +753,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .block {
   display: block;
 }
@@ -789,28 +781,20 @@ video {
   height: 10rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[20px\] {
-  height: 20px;
+.h-\[28px\] {
+  height: 28px;
+}
+
+.h-\[30px\] {
+  height: 30px;
 }
 
 .w-10 {
   width: 2.5rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .w-32 {
@@ -827,10 +811,6 @@ video {
 
 .w-80 {
   width: 20rem;
-}
-
-.w-\[30px\] {
-  width: 30px;
 }
 
 .w-\[85\%\] {
@@ -855,10 +835,6 @@ video {
 
 .basis-1\/3 {
   flex-basis: 33.333333%;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -987,11 +963,6 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .bg-linkaBg {
   --tw-bg-opacity: 1;
   background-color: rgb(48 108 178 / var(--tw-bg-opacity));
@@ -1034,14 +1005,6 @@ video {
 
 .bg-\[url\(\'https\:\/\/encrypted-tbn0\.gstatic\.com\/images\?q\=tbn\:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w\&usqp\=CAU\'\)\] {
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU');
-}
-
-.bg-\[url\(\'https\:\/\/flagicons\.lipis\.dev\/flags\/4x3\/ar\.svg\'\)\] {
-  background-image: url('https://flagicons.lipis.dev/flags/4x3/ar.svg');
-}
-
-.bg-\[url\(\'https\:\/\/flagicons\.lipis\.dev\/flags\/4x3\/us\.svg\'\)\] {
-  background-image: url('https://flagicons.lipis.dev/flags/4x3/us.svg');
 }
 
 .bg-\[url\(\'https\:\/\/img\.freepik\.com\/foto-gratis\/arco-iris-al-final-paisaje-carretera_23-2151596720\.jpg\?size\=626\&ext\=jpg\&ga\=GA1\.1\.1244375472\.1717090889\&semt\=ais_hybrid\'\)\] {
@@ -1179,12 +1142,20 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pl-7 {
@@ -1233,6 +1204,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-10 {
@@ -1698,6 +1673,22 @@ video {
   .sm\:bg-pink-950 {
     --tw-bg-opacity: 1;
     background-color: rgb(80 7 36 / var(--tw-bg-opacity));
+  }
+
+  .sm\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
+  .sm\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .sm\:text-left {
+    text-align: left;
+  }
+
+  .tablet\:mb-4 {
+    margin-bottom: 1rem;
   }
 }
 
