--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,4 +1,11 @@
-label {
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+}
+.labelDark {
     width: 90px;
     height: 35px;
     position: relative;
@@ -10,7 +17,7 @@ label {
     transition: 0.3s;
 }
 
-label::after {
+.labelDark::after {
     content: '';
     width: 40px;
     height: 35px;
@@ -43,7 +50,7 @@ svg {
     transition: 0.3s;
 }
 
-input {
+.inputDark {
     width: 0;
     height: 0;
     visibility: hidden;
@@ -119,72 +126,3 @@ body {
         }
     }
 }
-
-/* label {
-    width: 90px;
-    height: 35px;
-    position: relative;
-    display: block;
-    background: #ebebeb;
-    border-radius: 200px;
-    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4), inset 0px -5px 15px rgba(255, 255, 255, 0.4);
-    cursor: pointer;
-    transition: 0.3s;
-    &:after {
-        content: '';
-        width: 40px;
-        height: 35px;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        background: linear-gradient(180deg, #ffcc89, #d8860b);
-        border-radius: 180px;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-        transition: 0.3s;
-    }
-    svg {
-        position: absolute;
-        width: 30px;
-        top: 4¿0px;
-        z-index: 1;
-        &.sun {
-            left: 4px;
-            fill: #fff !important;
-            transition: 0.3s;
-        }
-        &.moon {
-            left: 55px;
-            top: 2px;
-            fill: #7e7e7e;
-            transition: 0.3s;
-        }
-    }
-}
-
-input {
-    width: 0;
-    height: 0;
-    visibility: hidden;
-    &:checked + label {
-        background: #242424;
-        &:after {
-            left: 90px;
-            transform: translateX(-100%);
-            background: linear-gradient(180deg, #777, #3a3a3a);
-        }
-        svg {
-            &.sun {
-                fill: #7e7e7e;
-            }
-            &.moon {
-                fill: #fff;
-            }
-        }
-        + .background {
-            background: #242424;
-        }
-    }
-    &:active:after {
-        width: 260px;
-    }
-} */
