--- a/src/output.css
+++ b/src/output.css
@@ -632,20 +632,68 @@ video {
   background-position: center;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
+}
+
+.absolute {
+  position: absolute;
 }
 
 .relative {
   position: relative;
 }
 
+.-left-full {
+  left: -100%;
+}
+
 .left-4 {
   left: 1rem;
 }
 
+.left-\[20px\] {
+  left: 20px;
+}
+
+.right-\[24px\] {
+  right: 24px;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
 .top-4 {
   top: 1rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-\[80px\] {
+  top: 80px;
+}
+
+.-left-0 {
+  left: -0px;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.-left-100 {
+  left: -400px;
+}
+
+.-left-200 {
+  left: -800px;
 }
 
 .col-\[1\/4\] {
@@ -670,6 +718,14 @@ video {
 
 .row-span-2 {
   grid-row: span 2 / span 2;
+}
+
+.float-right {
+  float: right;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .m-10 {
@@ -733,6 +789,14 @@ video {
   margin-left: 2rem;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -753,8 +817,24 @@ video {
   margin-top: 1rem;
 }
 
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.box-border {
+  box-sizing: border-box;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -777,6 +857,10 @@ video {
   height: 600px;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-40 {
   height: 10rem;
 }
@@ -791,6 +875,14 @@ video {
 
 .h-\[30px\] {
   height: 30px;
+}
+
+.h-calc {
+  height: calc(100vh - 80px);
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .w-10 {
@@ -893,6 +985,10 @@ video {
   gap: 1.25rem;
 }
 
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -941,6 +1037,21 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-\[\#2A3A47\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 58 71 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2c3e50\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 62 80 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#aab9ca\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(170 185 202 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -998,13 +1109,32 @@ video {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#16BECB\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 190 203 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2f9ca4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 156 164 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'https\:\/\/encrypted-tbn0\.gstatic\.com\/images\?q\=tbn\:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w\&usqp\=CAU\'\)\] {
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU');
+}
+
+.bg-\[url\(\'https\:\/\/images3\.alphacoders\.com\/130\/1308690\.jpg\'\)\] {
+  background-image: url('https://images3.alphacoders.com/130/1308690.jpg');
 }
 
 .bg-\[url\(\'https\:\/\/img\.freepik\.com\/foto-gratis\/arco-iris-al-final-paisaje-carretera_23-2151596720\.jpg\?size\=626\&ext\=jpg\&ga\=GA1\.1\.1244375472\.1717090889\&semt\=ais_hybrid\'\)\] {
@@ -1080,6 +1210,14 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .p-2 {
@@ -1179,9 +1317,18 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
 }
 
 .text-xl {
@@ -1203,6 +1350,15 @@ video {
 
 .leading-10 {
   line-height: 2.5rem;
+}
+
+.leading-\[80px\] {
+  line-height: 80px;
+}
+
+.text-\[\#161D2D\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 29 45 / var(--tw-text-opacity));
 }
 
 .text-azulFb {
@@ -1263,8 +1419,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-1000 {
   transition-duration: 1000ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .ease-in-out {
@@ -1444,6 +1610,11 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .hover\:file\:bg-pink-600::file-selector-button:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(219 39 119 / var(--tw-bg-opacity));
@@ -1551,6 +1722,10 @@ video {
 }
 
 @media (min-width: 390px) {
+  .smartphone\:fixed {
+    position: fixed;
+  }
+
   .smartphone\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -1564,13 +1739,25 @@ video {
     margin-top: 5rem;
   }
 
+  .smartphone\:h-\[100vh\] {
+    height: 100vh;
+  }
+
   .smartphone\:w-60 {
     width: 15rem;
+  }
+
+  .smartphone\:w-full {
+    width: 100%;
   }
 
   .smartphone\:bg-fucsiaCool {
     --tw-bg-opacity: 1;
     background-color: rgb(74 4 78 / var(--tw-bg-opacity));
+  }
+
+  .smartphone\:text-center {
+    text-align: center;
   }
 
   .smartphone\:text-2xl {
@@ -1635,6 +1822,99 @@ video {
   }
 }
 
+@media (min-width: 535px) {
+  .navbarHidden\:static {
+    position: static;
+  }
+
+  .navbarHidden\:left-full {
+    left: 100%;
+  }
+
+  .navbarHidden\:top-0 {
+    top: 0px;
+  }
+
+  .navbarHidden\:left-0 {
+    left: 0px;
+  }
+
+  .navbarHidden\:-left-full {
+    left: -100%;
+  }
+
+  .navbarHidden\:right-full {
+    right: 100%;
+  }
+
+  .navbarHidden\:float-right {
+    float: right;
+  }
+
+  .navbarHidden\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .navbarHidden\:block {
+    display: block;
+  }
+
+  .navbarHidden\:inline-block {
+    display: inline-block;
+  }
+
+  .navbarHidden\:hidden {
+    display: none;
+  }
+
+  .navbarHidden\:h-20 {
+    height: 5rem;
+  }
+
+  .navbarHidden\:w-full {
+    width: 100%;
+  }
+
+  .navbarHidden\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
+  .navbarHidden\:bg-\[\#2A3A47\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(42 58 71 / var(--tw-bg-opacity));
+  }
+
+  .navbarHidden\:bg-slate-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  }
+
+  .navbarHidden\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .navbarHidden\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .navbarHidden\:text-left {
+    text-align: left;
+  }
+
+  .navbarHidden\:transition-none {
+    transition-property: none;
+  }
+
+  .navbarHidden\:duration-0 {
+    transition-duration: 0s;
+  }
+
+  .navbarHidden\:hover\:bg-slate-500:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:mx-auto {
     margin-left: auto;
@@ -1677,6 +1957,10 @@ video {
   .tablet\:mb-4 {
     margin-bottom: 1rem;
   }
+
+  .tablet\:mr-4 {
+    margin-right: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1700,6 +1984,20 @@ video {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+}
+
+@media (min-width: 900px) {
+  .tabletXL\:right-\[32px\] {
+    right: 32px;
+  }
+
+  .tabletXL\:mr-5 {
+    margin-right: 1.25rem;
+  }
+
+  .tabletXL\:pl-8 {
+    padding-left: 2rem;
   }
 }
 
@@ -1742,6 +2040,10 @@ video {
 @media (min-width: 1280px) {
   .fhd\:h-\[280px\] {
     height: 280px;
+  }
+
+  .fhd\:font-semibold {
+    font-weight: 600;
   }
 }
 
