--- a/src/css/prueba.css
+++ b/src/css/prueba.css
@@ -1,3 +1,71 @@
-#burguer:checked ~ ul {
-    left: 0;
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+button {
+    height: 40px;
+    width: 80px;
+    margin: 0 0 0 2px;
+}
+header {
+    background-color: #2a3a47;
+    height: 80px;
+}
+.modal::backdrop {
+    height: 100%;
+    margin-top: 0px;
+    background-color: rgba(51, 48, 48, 0.9);
+    height: 100%;
+}
+.modal {
+    background-color: rgb(253, 247, 247, 0);
+    opacity: 1;
+    list-style-type: none;
+    text-align: center;
+    color: #75a8d1;
+}
+.btnCloseModal {
+    position: absolute;
+    top: -20px;
+}
+
+/* From Uiverse.io by prakashdc */
+.hamburger {
+    padding-top: 80px;
+    cursor: pointer;
+}
+
+.hamburger input {
+    display: none;
+}
+
+.hamburger svg {
+    /* The size of the SVG defines the overall size */
+    height: 3em;
+    /* Define the transition for transforming the SVG */
+    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+    fill: none;
+    stroke: #fff;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 3;
+    /* Define the transition for transforming the Stroke */
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+    stroke-dasharray: 12 63;
+}
+
+.hamburger input:hover + svg {
+    transform: rotate(-45deg);
+}
+
+.hamburger input:hover + svg .line-top-bottom {
+    stroke-dasharray: 20 300;
+    stroke-dashoffset: -32.42;
 }
