--- a/src/css/prueba.css
+++ b/src/css/prueba.css
@@ -1,3 +1,71 @@
+/* button {
+    height: 40px;
+    width: 80px;
+}
+header {
+    background-color: #2a3a47;
+    height: 80px;
+}
+.modal::backdrop {
+    backdrop-filter: blur(5px);
+    height: 100%;
+    width: 100%;
+    margin-top: 0px;
+    background-color: rgba(51, 48, 48, 0.5);
+    height: 100%;
+}
+.modal {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(253, 247, 247, 0);
+    opacity: 1;
+    list-style-type: none;
+    text-align: center;
+    color: #75a8d1;
+}
+.modal a {
+    outline: none;
+} */
+
+/* From Uiverse.io by prakashdc */
+/* .hamburger { */
+/* padding-top: 80px; */
+/* cursor: pointer; */
+/* } */
+
+/* .hamburger input {
+    display: none;
+} */
+
+/* .hamburger svg { */
+/* The size of the SVG defines the overall size */
+/* height: 3em; */
+/* Define the transition for transforming the SVG */
+/* transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1); */
+/* } */
+
+/* .line { */
+/* fill: none; */
+/* stroke: #fff; */
+/* stroke-linecap: round; */
+/* stroke-linejoin: round; */
+/* stroke-width: 3; */
+/* transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1); */
+/* } */
+
+/* .line-top-bottom { */
+/* stroke-dasharray: 12 63; */
+/* } */
+
+/* .hamburger input:hover + svg {
+    transform: rotate(-45deg);
+}
+
+.hamburger input:hover + svg .line-top-bottom {
+    stroke-dasharray: 20 300;
+    stroke-dashoffset: -32.42;
+} */
+
 body {
     padding: 0;
     margin: 0;
@@ -12,20 +80,19 @@ header {
     background-color: #2a3a47;
     height: 80px;
 }
-.modal::backdrop {
+/* .modal::backdrop {
     backdrop-filter: blur(5px);
-    height: 100%;
+    height: 100vh;
     margin-top: 0px;
-    background-color: rgba(51, 48, 48, 0.5);
-    height: 100%;
+    background-color: rgba(51, 48, 48, 0.502);
 }
 .modal {
-    background-color: rgb(253, 247, 247, 0);
+    background-color: rgba(253, 247, 247, 0);
     opacity: 1;
     list-style-type: none;
     text-align: center;
     color: #75a8d1;
-}
+} */
 
 /* From Uiverse.io by prakashdc */
 .hamburger {
@@ -58,14 +125,25 @@ header {
     stroke-dasharray: 12 63;
 }
 
-.hamburger input:hover + svg {
+.hamburger input:checked + svg {
     transform: rotate(-45deg);
 }
 
-.hamburger input:hover + svg .line-top-bottom {
+.hamburger input:checked + svg .line-top-bottom {
     stroke-dasharray: 20 300;
     stroke-dashoffset: -32.42;
 }
 .modal a {
     outline: none; /* Elimina el borde */
+}
+
+.transparente {
+    width: 80px;
+    height: 80px;
+}
+
+.x {
+    position: absolute;
+    left: 0px;
+    font-size: 32px;
 }
