--- a/src/output.css
+++ b/src/output.css
@@ -708,18 +708,6 @@ video {
   position: relative;
 }
 
-.inset-2 {
-  inset: 0.5rem;
-}
-
-.inset-4 {
-  inset: 1rem;
-}
-
-.-inset-6 {
-  inset: -1.5rem;
-}
-
 .-left-full {
   left: -100%;
 }
@@ -746,74 +734,6 @@ video {
 
 .top-5 {
   top: 1.25rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.-left-10 {
-  left: -2.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-40 {
-  right: 10rem;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.top-50 {
-  top: 200px;
-}
-
-.top-200 {
-  top: 800px;
-}
-
-.top-72 {
-  top: 18rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.left-auto {
-  left: auto;
-}
-
-.right-auto {
-  right: auto;
-}
-
-.left-6 {
-  left: 1.5rem;
-}
-
-.left-\[18px\] {
-  left: 18px;
 }
 
 .top-\[20px\] {
@@ -1442,11 +1362,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -1483,11 +1398,6 @@ video {
 
 .leading-\[80px\] {
   line-height: 80px;
-}
-
-.text-\[\#161D2D\] {
-  --tw-text-opacity: 1;
-  color: rgb(22 29 45 / var(--tw-text-opacity));
 }
 
 .text-\[\#75a8d1\] {
@@ -1580,6 +1490,10 @@ video {
   transition-duration: 150ms;
 }
 
+.delay-1000 {
+  transition-delay: 1000ms;
+}
+
 .duration-1000 {
   transition-duration: 1000ms;
 }
@@ -1590,6 +1504,10 @@ video {
 
 .duration-\[600ms\] {
   transition-duration: 600ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .ease-in-out {
@@ -1748,6 +1666,14 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.backdrop\:delay-1000::backdrop {
+  transition-delay: 1000ms;
+}
+
+.backdrop\:duration-1000::backdrop {
+  transition-duration: 1000ms;
+}
+
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
@@ -1853,19 +1779,6 @@ video {
 .disabled\:bg-red-200:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.group:hover .group-hover\:-rotate-45 {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group:hover .group-hover\:stroke-dasharray-20-300 {
-  stroke-dasharray: 20 300;
-}
-
-.group:hover .group-hover\:stroke-dashoffset--32.42 {
-  stroke-dashoffset: -32.42;
 }
 
 .peer:checked ~ .peer-checked\:left-0 {
